skip resolving field in table list if table list is not accessable due to groupping (BUG#4814)